# oz_class_backend

./: .gitignore  rest.html  test.py  test2.py  물어보기.py  화징실.html
Flask/: app.py
Flask/templates/: languages.html  number.html
HTML.CSS_class/1회차/: 04-HTML기본문법.html  05-HTML문서기본구조.html  06-텍스트표시하기.html  (+4 more)
MySQL_class/: SQL_CRUD_MACHINE.py  airbnb_dummy.py  airbnb_pymysql.py  re_refact_pymyspl.py  sug_pymyself.py
Python_class/: @ㄱ.시퀀스 자료형.py  Samiiz_lotto.py  test.py  toy.py
bootstrap/: index.html  kream_crawl.py
django/: db.sqlite3
f11/: app.py
oz-django/: Readme.md  db.sqlite3  pyproject.toml
oz-django/boards/: admin.py  models.py
oz-django/boards/migrations/: 0001_initial.py  0002_board_date_board_likes_board_reviews_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
oz-django/common/: models.py
oz-django/config/: authentication.py  settings.py  urls.py
oz-django/feeds/: models.py  serializers.py  urls.py  views.py
oz-django/feeds/migrations/: 0001_initial.py
oz-django/questions/: urls.py  views.py
oz-django/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
oz-django/reviews/migrations/: 0001_initial.py
oz-django/users/: admin.py  serializers.py  urls.py  views.py
oz-django/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
간이유튜브/: YT.css  YT.html  YT.py
크롤링/: kream.py  kream_return_dict.py  mellon-m.py  melon.py  melon_2.py  my_selenium.py  my_selenium_2.py  my_selenium_3.py  naver_0.py  naver_1.py  naver_2.py  naver_3.py  naver_4.py  naver_5.py  yooutube.py
(+199 files in other folders)
